# backend/tests/snapshots/openapi.json
@@ -14,6 +14,18 @@
             "minLength": 1,
             "title": "Session Id",
             "type": "string"
+          },
+          "timezone": {
+            "anyOf": [
+              {
+                "maxLength": 50,
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Timezone"
           }
         },
         "required": [
